# IRISC-GS

./: CMakeLists.txt  LICENSE  README.md
gtk_parts/: part1.glade  part1.glade~
output/: tc_logg.txt
src/e_link/: e_link.c  e_link.h
src/global_utils/: global_utils.c  global_utils.h
src/init/: init.c  init.h
src/telecommand/: telecommand.c  telecommand.h
src/telemetry/: telemetry.c  telemetry.h
src/ui/: ui.c  ui.h
